adding portfolio page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="stylesheet.css" />
+    <meta name="viewport" content="width=display-width, initial-scale=1" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="intro">
+        <img src="https://via.placeholder.com/150" />
+        <h1 id="name">Kaedin Scott</h1>
+        <p>{{goes crazy}}</p>
+        <h3>Web dev student at University of Central Florida</h3>
+      </div>
+
+      <div class="about-grid">
+        <div class="i-am">
+          <h1>I am</h1>
+          <ul class="about-list">
+            <li>An student</li>
+            <li>An hobby gamer</li>
+            <li>An photographer</li>
+          </ul>
+        </div>
+        <div class="i-like">
+          <h1>I like to</h1>
+          <ul class="about-list">
+            <li>Fly drones</li>
+            <li>Go on adventures</li>
+            <li>Travel</li>
+            <li>Go Fishing</li>
+          </ul>
+        </div>
+      </div>
+
+      <div>
+        <h3 class="projects-heading">My Projects</h3>
+        <div class="projects-grid">
+          <img class="project-image" src="https://via.placeholder.com/300" />
+          <img class="project-image" src="https://via.placeholder.com/300" />
+          <img class="project-image" src="https://via.placeholder.com/300" />
+          <img class="project-image" src="https://via.placeholder.com/300" />
+        </div>
+      </div>
+
+      <div>
+        <h3>Links</h3>
+        <ul>
+          <li>
+            <a href="https://github.com/kaedinscott">Github</a>
+          </li>
+          <li>
+            <a href="https://twitter.com/kaedin_scott">Twitter</a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/kaedinscott">Linkedin</a>
+          </li>
+        </ul>
+      </div>
+
+      <div>
+        <form action="#">
+          <label for="email">
+            Email: <input id="email" placeholder="Enter your email" />
+          </label>
+          <label for="message">
+            Message: <textarea id="message">Your Message</textarea>
+          </label>
+          <input type="submit" value="Send Message" />
+        </form>
+      </div>
+    </div>
+  </body>
+</html>
