--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       <div>
         <h3 class="projects-heading">My Projects</h3>
         <div class="projects-grid">
+          <a href="https://github.com/kaedinscott12/todolist-app"
+            >To Do list App</a
+          >
           <img class="project-image" src="https://via.placeholder.com/300" />
           <img class="project-image" src="https://via.placeholder.com/300" />
           <img class="project-image" src="https://via.placeholder.com/300" />
