uploaded links to repo

--- a/index.html
+++ b/index.html
@@ -37,11 +37,28 @@
       <div>
         <h3 class="projects-heading">My Projects</h3>
         <div class="projects-grid">
-          <a href="https://github.com/kaedinscott12/todolist-app"
-            >To Do list App</a
-          >
-          <img class="project-image" src="https://via.placeholder.com/300" />
-          <img class="project-image" src="https://via.placeholder.com/300" />
+          <a
+            href="https://github.com/kaedinscott12/todolist-app"
+            style="text-align: center"
+            >To Do List App
+            <img
+              class="project-image"
+              src="Screenshot 2023-04-24 at 10.30.49 PM.jpg"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <a
+            href="https://github.com/kaedinscott12/exercise-app"
+            style="text-align: center"
+            >Exercise App
+            <img
+              class="project-image"
+              src="Screenshot 2023-04-24 at 10.37.38 PM.png"
+              width="300px"
+              height="300px"
+            />
+          </a>
           <img class="project-image" src="https://via.placeholder.com/300" />
           <img class="project-image" src="https://via.placeholder.com/300" />
         </div>
