--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="intro">
-        <img src="1632003995704.jpeg" />
+        <img src="1632003995704.jpeg" width="150px" height="150px" />
         <h1 id="name">Kaedin Scott</h1>
         <p>{{goes crazy}}</p>
         <h3>Web dev student at University of Central Florida</h3>
