uploaded links to repo

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h3>Links</h3>
         <ul>
           <li>
-            <a href="https://github.com/kaedinscott">Github</a>
+            <a href="https://github.com/kaedinscott12">Github</a>
           </li>
           <li>
             <a href="https://twitter.com/kaedin_scott">Twitter</a>
