uploaded links to repo

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="i-am">
           <h1>I am</h1>
           <ul class="about-list">
-            <li>An student</li>
-            <li>An hobby gamer</li>
-            <li>An photographer</li>
+            <li>A student</li>
+            <li>A hobby gamer</li>
+            <li>A photographer</li>
           </ul>
         </div>
         <div class="i-like">
