--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
       <div class="intro">
         <img src="1632003995704.jpeg" width="150px" height="150px" />
         <h1 id="name">Kaedin Scott</h1>
-        <p>{{goes crazy}}</p>
-        <h3>Web dev student at University of Central Florida</h3>
+
+        <h3>Web Design Student at University of Central Florida</h3>
       </div>
 
       <div class="about-grid">
-        <div class="i-am">
+        <!-- <div class="i-am">
           <h1>I am</h1>
           <ul class="about-list">
             <li>A student</li>
             <li>A hobby gamer</li>
             <li>A photographer</li>
           </ul>
-        </div>
-        <div class="i-like">
+        </div> -->
+        <!-- <div class="i-like">
           <h1>I like to</h1>
           <ul class="about-list">
             <li>Fly drones</li>
@@ -31,7 +31,7 @@
             <li>Travel</li>
             <li>Go Fishing</li>
           </ul>
-        </div>
+        </div> -->
       </div>
 
       <div>
@@ -80,7 +80,7 @@
       </div>
 
       <div>
-        <form action="#">
+        <!-- <form action="#">
           <label for="email">
             Email: <input id="email" placeholder="Enter your email" />
           </label>
@@ -88,7 +88,7 @@
             Message: <textarea id="message">Your Message</textarea>
           </label>
           <input type="submit" value="Send Message" />
-        </form>
+        </form> -->
       </div>
     </div>
   </body>
