Updated img src

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <body>
     <div class="container">
       <div class="intro">
-        <img src="1632003995704.jpeg" width="150px" height="150px" />
+        <img
+          src="headshot.JPG"
+          width="150px"
+          height="150px"
+          alt="Headshot of Kaedin Scott"
+        />
         <h1 id="name">Kaedin Scott</h1>
 
         <h3>Web Design Student at University of Central Florida</h3>
