--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <div class="container">
       <div class="intro">
         <img
-          src="headshot.JPG"
-          width="150px"
-          height="150px"
+          src="headshot.jpg"
+          width="200px"
+          height="232px"
           alt="Headshot of Kaedin Scott"
         />
         <h1 id="name">Kaedin Scott</h1>
