--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="intro">
         <img
-          src="headshot.jpg"
+          src="Kaedin.jpg"
           width="200px"
           height="232px"
           alt="Headshot of Kaedin Scott"
